# spring-booster

./: .gitignore  .npmrc  .prettierrc  LICENSE  README.md  build.gradle  build.gradle.kts  codestyle.gradle  docker-compose.yaml  gradle.properties  gradle.properties.template  lombok.config  memory  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  projects.gradle  settings.gradle  settings.gradle.kts  spring.boost.yaml  tasks.gradle  tk-cli.toml  tk-cli.yaml
.husky/: pre-commit
apps/: build.gradle  build.gradle.kts
docs/: .gitignore  (+7 more)
website/: .gitignore  build.gradle.kts  docusaurus.config.js  docusaurus.config.ts  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml
website/docs/: index.md
website/docs/en/: index.md
website/docs/tutorial-basics/: getting-start.md
website/docs/zh/: index.md
website/i18n/en/: code.json  navbar.json
website/i18n/zh/: code.json
website/i18n/zh/docusaurus-plugin-content-docs/: current.json
website/i18n/zh/docusaurus-plugin-content-docs/current/: intro.md
website/i18n/zh/docusaurus-plugin-content-docs/current/tutorial-basics/: getting-start.md
website/i18n/zh/docusaurus-theme-classic/: navbar.json
website/src/asciidoc/: index.adoc
website/src/asciidoc/en/: index.adoc
website/src/asciidoc/zh/: index.adoc
website/src/main/java/org/toolkit/spring/boot/website/: WebsiteApplication.java
website/src/main/kotlin/org/toolkit/spring/boot/website/: WebsiteApplication.kt
website/src/main/resources/: application.yaml
website/src/pages/: index.tsx
website/static/en/: index.html
website/static/zh/: index.html
(+3811 files in other folders)
