[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["DaiYuANg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = {extras = ["optimize"], version = "^9.4.9"}
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-print-site-plugin = "^2.3.6"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-glightbox = "^0.3.5"

[tool.poetry.dev-dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
